--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,47 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.javatechnics</groupId>
-  <artifactId>camel-test</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <modules>
-    <module>simpleservice</module>
-    <module>camel</module>
-  </modules>
-  <packaging>pom</packaging>
-  <name>camel-test</name>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.javatechnics</groupId>
+    <artifactId>camel-test</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>simpleservice</module>
+        <module>camel</module>
+        <module>api</module>
+    </modules>
+    <packaging>pom</packaging>
+    <name>camel-test</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core-osgi</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-blueprint</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-servlet</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jackson</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.aries.blueprint</groupId>
+            <artifactId>org.apache.aries.blueprint.annotation.api</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+    </dependencies>
 </project>
