--- a/simpleservice/pom.xml
+++ b/simpleservice/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <direct.getUser>direct:getUser</direct.getUser>
     </properties>
 
     <build>
