Defined Data Transfer Object in Simple-Service API bundle.

--- a/simpleservice/pom.xml
+++ b/simpleservice/pom.xml
@@ -12,6 +12,13 @@
 
     <name>simple-service</name>
     <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>com.javatechnics</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,14 +37,6 @@
                         <Export-Package>com.javatechnics.camel.service</Export-Package>
                         <Bundle-Blueprint-Annotation>true</Bundle-Blueprint-Annotation>
                     </instructions>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
                 </configuration>
             </plugin>
         </plugins>
