Attempt to introduce second REST API bundle.

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>simpleservice</module>
         <module>camel</module>
         <module>api</module>
+        <module>time-api</module>
     </modules>
     <packaging>pom</packaging>
     <name>camel-test</name>
